# pynwb

./: .codecov.yml  .codespellrc  .coveragerc  .gitattributes  .gitignore  .gitmodules  .mailmap  .pep8speaks.yml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  Legal.txt  MANIFEST.in  Makefile  README.rst  appveyor.yml  azure-pipelines-nightly.yml  azure-pipelines.yml  bitbucket-pipelines.yml  constraints.txt  environment-ros3.yml  hdmf_tox.ini  license.txt  new_tox.ini  nwb.behavior.yaml  nwb.namespace.yaml  nwb.ophys.yaml  nwb.retinotopy.yaml  out.txt  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-min.txt  requirements-notebook.txt  requirements-opt.txt  requirements.txt  setup.cfg  setup.py  test.h5  (+8 more)
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.rst  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: check_external_links.yml  check_sphinx_links.yml  codespell.yml  deploy_release.yml  generate_test_files.yml  project_action.yml  ruff.yml  run_all_tests.yml  run_coverage.yml  run_dandi_read_tests.yml  run_flake8.yml  run_inspector_tests.yml  run_tests.yml  workflow.yml
benchmarks/: README.rst  asv.conf.json
benchmarks/benchmarks/: __init__.py  bench_create.py  bench_import.py  common.py
docker/dev/: Dockerfile
docker/python27_test/: Dockerfile
docker/python35_test/: Dockerfile
docker/python36_test/: Dockerfile
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  Makefile  PULL_REQUEST_TEMPLATE.md  conf.py  index.rst  make.bat
docs/code/: creating-and-writing-nwbfile-2.py  creating-and-writing-nwbfile.py  extracting-specification.py  write-read-ophys.py
docs/examples/: example.py
docs/gallery/: README.txt
docs/notebooks/: NERD_TermSet_How_to_Guide.ipynb  NERD_TermSet_Quickstart.ipynb  convert-crcns-ret-1-meisterlab-compare-nwb-1.0.6.ipynb  convert-crcns-ret-1-meisterlab-with-custom-extensions-and-external-stimulus.ipynb  convert-crcns-ret-1-meisterlab-with-custom-extensions.ipynb  convert-crcns-ret-1-meisterlab-without-custom-extensions.ipynb  convert-crcns-ret-1-meisterlab.ipynb  experimenter_term_set.yaml  read-Allen-Brain-Oservatory.ipynb  species_term_set.yaml  zarr_file_conversion_test.ipynb
docs/source/: api_docs.rst  architecture.rst  building_api.rst  conf.py  example.rst  export.rst  extension.rst  extensions.rst  extracting-specification.rst  form.backends.hdf5.h5tools.rst  form.backends.hdf5.rst  form.backends.io.rst  form.backends.rst  form.build.builders.rst  form.build.map.rst  form.build.rst  form.container.rst  form.monitor.rst  form.rst  form.spec.catalog.rst  form.spec.namespace.rst  form.spec.rst  form.spec.spec.rst  form.spec.write.rst  form.utils.rst  getting_started.rst  index.rst  install_developers.rst  install_users.rst  legal.rst  make_a_release.rst  make_a_tutorial.rst  make_roundtrip_test.rst  modules.rst  overview.rst  overview_citing.rst  overview_intro.rst  overview_nwbfile.rst  overview_software_architecture.rst  pynwb.base.rst  (+87 more)
scripts/: add_object_id.py
src/: reformat_spec.py
src/form/: __init__.py  container.py  data_utils.py  monitor.py  utils.py
src/pynwb/: __init__.py  _version.py  auto_class.py  base.py  behavior.py  container.py  core.py  device.py  ecephys.py  ephys.py  epoch.py  file.py  globals.py  h5tools.py  icephys.py  image.py  misc.py  nwb.py  nwbep.py  nwbmo.py  nwbtools.py  nwbts.py  ogen.py  ophys.py  resources.py  retinotopy.py  spec.py  termset_config.py  tools.py  utils.py  validate.py  validation.py  writer.py
tests/: build_fake_data.py  build_fake_extension.py  coloredtestrunner.py  context.py  test_container.py  test_core.py  test_ephys.py  test_epoch.py  test_h5tools.py  test_nwbep.py  test_nwbts.py  test_spec.py  test_timeseries.py  test_utils.py
tests/back_compat/: 1.0.2_nwbfile.nwb  1.0.2_str_experimenter.nwb  1.0.2_str_pub.nwb  1.0.3_nwbfile.nwb  1.0.3_str_experimenter.nwb  1.0.3_str_pub.nwb  1.1.0_nwbfile.nwb  1.1.0_str_experimenter.nwb  1.1.0_str_pub.nwb  1.1.2_nwbfile.nwb  1.1.2_str_experimenter.nwb  1.1.2_str_pub.nwb  1.2.1_extension.nwb  1.2.1_nwbfile.nwb  1.3.3_imageseries_no_data.nwb  1.3.3_imageseries_no_unit.nwb  1.3.3_timeseries_no_data.nwb  1.3.3_timeseries_no_unit.nwb  1.3.3_ts_no_data.nwb  1.3.3_ts_no_unit.nwb  1.5.1_imageseries_no_data.nwb  1.5.1_imageseries_no_unit.nwb  1.5.1_timeintervals_non_ndtype_tsref.nwb  1.5.1_timeseries_no_data.nwb  1.5.1_timeseries_no_unit.nwb  2.1.0_imageseries_no_data.nwb  2.1.0_imageseries_non_external_format.nwb  2.1.0_imageseries_nonmatch_starting_frame.nwb  2.1.0_nwbfile_with_extension.nwb  2.2.0_subject_no_age__reference.nwb  2.3.2_old_electrodes_table_basic.nwb  2.3.2_old_electrodes_table_full.nwb  2.6.0_DynamicTableElectrodes.nwb  test_import_structure.py  test_imports.py  test_read.py
tests/coverage/: runCoverage
tests/integration/: __init__.py  test_io.py  test_io_utils.py
tests/read_dandi/: read_first_nwb_asset.py  test_read_dandi.py
tests/unit/: __init__.py  foo.py  test_MultiContainerInterface.py  test_base.py  test_behavior.py  test_config.py  test_container.py  test_core.py  test_core_DataChunkIterator.py  test_core_DynamicTable.py  test_core_NWBContainer.py  test_core_ShapeValidator.py  test_device.py  test_ecephys.py  test_ephys.py  test_epoch.py  test_epoch_legacy.py  test_extension.py  test_file.py  test_h5tools.py  test_icephys.py  test_icephys_metadata_tables.py  test_image.py  test_import.py  test_io.py  test_io_build_builders.py  test_io_hdf5.py  test_io_hdf5_h5tools.py  test_io_manager.py  test_io_map.py  test_io_utils.py  test_misc.py  test_mock.py  test_mock_elect.py  test_ogen.py  test_ophys.py  test_resources.py  test_scratch.py  (+5 more)
tools/: reformat_spec.py
(+471 files in other folders)
