[bdist_wheel]
universal = 1

[versioneer]
VCS = git
versionfile_source = src/pynwb/_version.py
versionfile_build = pynwb/_version.py
style = pep440-pre
tag_prefix = *.*.*

[flake8]
max-line-length = 120
max-complexity = 17
exclude =
  .git,
  .tox,
  __pycache__,
  build/,
  dist/,
  src/pynwb/nwb-schema/
  docs/_build/,
  docs/source/conf.py
  docs/source/tutorials/
  versioneer.py,
  src/pynwb/_version.py
  src/pynwb/_due.py
per-file-ignores =
  docs/gallery/*:E402,T001
  docs/source/tutorials/*:E402,T001
  src/pynwb/io/__init__.py:F401
  src/pynwb/legacy/io/__init__.py:F401
  tests/integration/__init__.py:F401
  src/pynwb/testing/__init__.py:F401
  src/pynwb/validate.py:T001
  setup.py:T001
  test.py:T001
  scripts/*:T001

[metadata]
description-file = README.rst
