[versioneer]
VCS = git
versionfile_source = src/pynwb/_version.py
versionfile_build = pynwb/_version.py
tag_prefix = ''
style = pep440-pre

[flake8]
max-line-length = 120
max-complexity = 17
exclude =
  .git,
  .tox,
  __pycache__,
  build/,
  dist/,
  src/pynwb/nwb-schema/
  docs/_build/,
  docs/source/conf.py
  docs/source/tutorials/
  versioneer.py,
  src/pynwb/_version.py
  src/pynwb/_due.py
per-file-ignores =
  docs/gallery/*:E402,E501,T201
  docs/source/tutorials/*:E402,T201
  src/pynwb/io/__init__.py:F401
  src/pynwb/legacy/io/__init__.py:F401
  tests/integration/__init__.py:F401
  src/pynwb/testing/__init__.py:F401
  src/pynwb/validate.py:T201
  tests/read_dandi/test_read_dandi.py:T201
  setup.py:T201
  test.py:T201
  scripts/*:T201
extend-ignore = E203

[metadata]
description_file = README.rst

[isort]
profile = black
